[#12429] feat(catalog-lakehouse-generic): Pluggable table location provider (#13058)
### What changes were proposed in this pull request?

Adds a `ServiceLoader`-based `TableLocationProvider` SPI to the generic
lakehouse catalog, so a
deployment can replace the built-in path derivation with a strategy of
its own. This implements the
design in #12971.

```java
public interface TableLocationProvider {
  String name();
  String provisionTableLocation(TableLocationContext context);
  void unprovisionTableLocation(TableLocationContext context);
}
```

Two operations: hand out a location for a table being created, hand one
back for a table that is
gone.

**The catalog reports; the provider decides.** The catalog's part is to
hand over an accurate
account of what happened -- what the creation request asked for, where
the table ended up, whether
the data under a location is gone -- and the provider's part is to
decide what that account means
for the storage it manages. The catalog does not model what an
implementation keeps, and an
implementation is never asked to reconstruct what the catalog or the
table formats did. There is one
exception, written as an exception rather than as the rule, and it is
the external-drop skip below.

Earlier revisions exposed more -- a lifecycle pair, a third release
callback, `isExternal()`,
`isPurge()`, and a call site for a location the format declined -- and
each has since been removed
after review, because in every case the catalog was either deciding on
the provider's behalf or
inferring what the provider had done internally.

**Responsibilities.** A provider owns the right to use a path; the table
format owns the content at
the path. The dividing line is not physical against logical -- a
provider may well create real
infrastructure -- but what a thing was created for: anything brought
into being so that the path can
be used belongs to the provider, and anything written into the path
belongs to the format. The
catalog owns neither; it sto